[ECLIPSE] Đa ngôn ngữ
- Thêm đa ngôn ngữ cho các trang: trang chủ, sản phẩm, sản phẩm chi tiết, giới thiệu, giỏ hàng, ngôn ngữ, đăng nhập, đăng ký, quên mật khẩu

--- a/ConverseStore_Java6/src/main/resources/templates/layout/footer.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/footer.html
@@ -12,36 +12,32 @@
 				<div class="container-fluid text-justify text-md-start mt-5">
 					<div class="row mt-3">
 						<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-							<p
+							<p th:text="#{foot.foot1}"
 								style="text-indent: 30px; text-align: justify; margin-top: 37px; font-size: 17px;">
-								Tìm thấy câu trả lời cho độ bền không giới hạn mà CONVERSE luôn
-								hướng tới để tiếp tục phát triển bền bỉ.Đó là lý tưởng của sự
-								mạnh mẽ, chức năng và khả năng hoạt động tốt kết hợp với độ cứng
-								cáp tuyệt đối.Lý tưởng này là nguồn gốc của độ cứng cáp mà
-								CONVERSE luôn tìm kiếm.</p>
+								</p>
 						</div>
 
 						<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-							<h4 class="text-uppercase fw-bold mb-4">CỬA HÀNG TẠI HÀ NỘI</h4>
-							<p class="fs-17">187 Phố Vọng, Hai Bà Trưng, Hà Nội.</p>
-							<p class="fs-17">187 Phố Vọng-Quân Hai Bà Trưng-Hà Nội.</p>
-							<p class="fs-17">82 Cầu Giấy, Quan Hoa, Cầu Giấy.</p>
+							<h4 th:text="#{foot.footTitle2}" class="text-uppercase fw-bold mb-4">CỬA HÀNG TẠI HÀ NỘI</h4>
+							<p th:text="#{foot.foot2Sub1}" class="fs-17">187 Phố Vọng, Hai Bà Trưng, Hà Nội.</p>
+							<p th:text="#{foot.foot2Sub2}" class="fs-17">187 Phố Vọng-Quân Hai Bà Trưng-Hà Nội.</p>
+							<p th:text="#{foot.foot2Sub3}" class="fs-17">82 Cầu Giấy, Quan Hoa, Cầu Giấy.</p>
 						</div>
 
-						<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-							<h4 class="text-uppercase fw-bold mb-4">CỬA HÀNG TẠI TP.HCM</h4>
-							<p class="fs-17">497 Hoàng Văn Thụ, Phường 4, Q. Tân Bình,
+						<div  class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+							<h4 th:text="#{foot.footTitle3}" class="text-uppercase fw-bold mb-4">CỬA HÀNG TẠI TP.HCM</h4>
+							<p th:text="#{foot.foot3Sub1}" class="fs-17">497 Hoàng Văn Thụ, Phường 4, Q. Tân Bình,
 								TP.HCM.</p>
-							<p class="fs-17">676 Lê Trọng Tấn, P. Bình Hưng Hòa, Q. Bình
+							<p th:text="#{foot.foot3Sub2}" class="fs-17">676 Lê Trọng Tấn, P. Bình Hưng Hòa, Q. Bình
 								Tân, HCM.</p>
-							<p class="fs-17">20 đường 3 tháng 2, Phường 12, Quận 10,
+							<p th:text="#{foot.foot3Sub3}" class="fs-17">20 đường 3 tháng 2, Phường 12, Quận 10,
 								TPHCM.</p>
 						</div>
 
 						<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-							<h4 class="text-uppercase fw-bold mb-4">LIÊN LẠC</h4>
-							<p class="fs-17">CONVERSEvietnam.net@gmail.com</p>
-							<p class="fs-17">0105517236</p>
+							<h4 th:text="#{foot.footTitle4}" class="text-uppercase fw-bold mb-4">LIÊN LẠC</h4>
+							<p th:text="#{foot.foot4Sub1}" class="fs-17">CONVERSEvietnam.net@gmail.com</p>
+							<p th:text="#{foot.foot4Sub2}" class="fs-17">0105517236</p>
 						</div>
 					</div>
 				</div>
