--- a/ConverseStore_Java6/src/main/resources/templates/user/dangnhap.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/dangnhap.html
@@ -29,10 +29,10 @@
             <div class="row m-5 login1">
 
                 <div class="col-md-6 login-form p-5">
-                    <h2 class="text-center">ĐĂNG NHẬP</h2>
+                    <h2 class="text-center">[[#{ddangnhap.dangnhap}]]</h2>
                     <form action="" class="needs-validation" novalidate>
                         <div class="mb-4 mt-3">
-                            <label for="email">Email:</label>
+                            <label for="email">[[#{ddangnhap.email}]]</label>
                             <input type="email" class="form-control" id="email" placeholder="Nhập email" name="email"
                                 required>
                             <div class="valid-feedback">Đã nhập gmail</div>
