--- a/ConverseStore_Java6/src/main/resources/templates/user/giohang.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/giohang.html
@@ -11,11 +11,11 @@
                 <thead>
                     <tr>
                         <th></th>
-                        <th>Hình</th>
-                        <th>Tên</th>
-                        <th>Giá</th>
-                        <th>Số lượng</th>
-                        <th>Tạm tính</th>
+                        <th>[[#{ggiohang.hinh}]]</th>
+                        <th>[[#{ggiohang.ten}]]</th>
+                        <th>[[#{ggiohang.gia}]]</th>
+                        <th>[[#{ggiohang.soluong}]]</th>
+                        <th>[[#{ggiohang.tamtinh}]]</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -56,30 +56,30 @@
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-header">
-                            <h3>CỘNG GIỎ HÀNG</h3>
+                            <h3><th>[[#{ggiohang.conggiohang}]]</th></h3>
                         </div>
                         <div class="card-body">
                             <table class="table table-hover text-center table-size">
                                 <tr>
                                     <td>
-                                        <h6>Tạm tính</h6>
+                                        <h6>[[#{ggiohang.tamtinh}]]</h6>
                                     </td>
                                     <td>950.000đ</td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <h6>Giảm giá</h6>
+                                        <h6>[[#{ggiohang.giamgia}]]</h6>
                                     </tD>
                                     <td>0đ</td>
                                 </tr>
                                 <tr>
-                                    <th>TỔNG</th>
+                                    <th>[[#{ggiohang.tong}]]</th>
                                     <th>950.000đ</th>
                                 </tr>
                             </table>
                         </div>
                         <div class="card-footer">
-                            <a href="thongtin_donhang.html" class="btn btn-cart btn-btn"> TIẾN HÀNH THANH TOÁN</a>
+                            <a href="thongtin_donhang.html" class="btn btn-cart btn-btn"> [[#{ggiohang.thanhtoan}]]</a>
                         </div>
                     </div>
                 </div>
