--- a/ConverseStore_Java6/src/main/resources/templates/user/gioithieu.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/gioithieu.html
@@ -14,12 +14,10 @@
         <div class="container">
             <img src="/assets/images/slideShow1.jpg" alt="" />
             <div class="about-title">
-                <h1>Chào bạn, chúng tôi là CONVERSE!</h1>
-                <p class="sub-title">Hân hạnh được phục vụ bạn</p>
+                <h1>[[#{gioithieu.title}]]</h1>
+                <p class="sub-title">[[#{gioithieu.titleSub}]]</p>
                 <p class="sub-content">
-                    Chúng tôi biến sản phẩm phụ kiện không thể thiếu trở thành
-                    những biểu tượng tinh thần đầy cảm hứng, để thúc đẩy thế hệ
-                    trẻ Việt Nam không ngừng tiến lên phía trước.
+                    [[#{gioithieu.titleContent}]]
                 </p>
             </div>
         </div>
@@ -33,17 +31,15 @@
                 <img src="/assets/images/why.dadbe7c5.png" alt="" />
             </div>
             <div class="col-md-6 col2">
-                <p class="p-content content1">TẠI SAO KHÔNG?</p>
+                <p class="p-content content1">[[#{gioithieu.whynot}]]</p>
                 <p class="p-content content2">
-                    Đó là câu hỏi của chúng tôi khi bắt đầu.
+                    [[#{gioithieu.whynot1}]]
                 </p>
                 <p class="p-content content3">
-                    Và cũng là tinh thần "Why not" chúng tôi khát khao truyền tải
+                    [[#{gioithieu.whynot2}]]
                 </p>
                 <p class="p-content content4">
-                    Với những sản phẩm được thiết kế bằng nhiệt huyết, khát khao và khối
-                    óc đầy sáng tạo của đội ngũ chính những người trẻ Việt Nam, chúng tôi
-                    tin rằng tinh thần "Why not" ấy sẽ luôn đồng hành và truyền cảm hứng cho bạn mỗi ngày.
+                    [[#{gioithieu.whynot3}]]
                 </p>
             </div>
         </section>
@@ -54,13 +50,11 @@
                     <img src="/assets/images/about-value2.png" alt="" />
                 </div>
                 <div class="about-core-name">
-                    <p>Dám nghĩ, dám làm</p>
+                    <p>[[#{gioithieu.title1}]]</p>
                 </div>
                 <div class="about-core-text">
                     <p>
-                        Với khát khao trở thành người đồng hành của các bạn, chúng tôi
-                        tin rằng chính mình phải có đủ can đảm để vượt qua thách thức, dám nghĩ,
-                        dám dẫn đầu và khác biệt.
+                        [[#{gioithieu.content1}]]
                     </p>
                 </div>
             </div>
@@ -69,27 +63,24 @@
                     <img src="/assets/images/about-value1.png" alt="" />
                 </div>
                 <div class="about-core-name">
-                    <p>Bắt đầu và kết thúc bằng khách hàng</p>
+                    <p>[[#{gioithieu.title2}]]</p>
                 </div>
                 <div class="about-core-text">
                     <p>
-                        Với tinh thần của những chiến binh, chúng tôi luôn chiến đấu với
-                        chính bản thân mình mỗi ngày để đem lại những trải nghiệm “WOW” nhất cho người trẻ Việt Nam.
+                        [[#{gioithieu.content2}]]
                     </p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="about-core-img">
-                    <img src="/<assets></assets>/images/about-value3.png" alt="" />
+                    <img src="/assets/images/about-value3.png" alt="" />
                 </div>
                 <div class="about-core-name">
-                    <p>Truyền cảm hứng</p>
+                    <p>[[#{gioithieu.title3}]]</p>
                 </div>
                 <div class="about-core-text">
                     <p>
-                        Tương lai với chúng tôi là những sản phẩm vươn tầm thế giới,
-                        là thế hệ trẻ Việt Nam đầy tự tin để theo đuổi đam mê của mình,
-                        là "Why not?" trở thành triết lí của tất cả mọi người.
+                        [[#{gioithieu.content3}]]
                     </p>
                 </div>
             </div>
