--- a/ConverseStore_Java6/src/main/resources/templates/user/dangky.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/dangky.html
@@ -16,8 +16,8 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" />
-    <link rel="stylesheet" href="./css/mycss.css">
-    <link rel="stylesheet" href="./font/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="/assets/css/mycss.css">
+    <link rel="stylesheet" href="/assets/font/themify-icons/themify-icons.css">
 
 </head>
 
@@ -30,7 +30,7 @@
                 <div class="col-md-6" style="padding: 0; ">
                     <img style="    
                     object-fit: cover;
-                    height: 700px;" src="./images/signup.jpg" alt="HinhAnh">
+                    height: 700px;" src="/assets/images/signup.jpg" alt="HinhAnh">
                 </div>
                 <div class="col-md-6 login-form  p-5">
                     <h2 class="text-center">ĐĂNG KÝ</h2>
