--- a/ConverseStore_Java6/src/main/resources/templates/user/doimatkhau.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/doimatkhau.html
@@ -15,8 +15,8 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" />
-    <link rel="stylesheet" href="./css/mycss.css">
-    <link rel="stylesheet" href="./font/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="/assets/css/mycss.css">
+    <link rel="stylesheet" href="/assets/font/themify-icons/themify-icons.css">
 
 </head>
 
@@ -29,20 +29,20 @@
                 <div class="col-md-6" style="padding: 0; ">
                     <img style="    
                     object-fit: cover;
-                    height: 700px;" src="./images/changepass.jpg" alt="HinhAnh">
+                    height: 700px;" src="/assets/images/changepass.jpg" alt="HinhAnh">
                 </div>
                 <div class="col-md-6 login-form  p-3">
-                    <h2 class="text-center">ĐỔI MẬT KHẨU</h2>
+                    <h2 class="text-center">[[#{ddoimatkhau.doimatkhau}]]</h2>
                     <form action="" class="needs-validation" novalidate>
                         <div class="mb-4 mt-3">
-                            <label for="email">Email:</label>
+                            <label for="email">[[#{ddoimatkhau.email}]]</label>
                             <input type="email" class="form-control" id="email" placeholder="Nhập email" name="email"
                                 required>
                             <div class="valid-feedback">Đã nhập gmail</div>
                             <div class="invalid-feedback">Vui lòng nhập gmail</div>
                         </div>
                         <div class="mb-4 mt-3">
-                            <label for="pwd">Mật khẩu cũ:</label>
+                            <label for="pwd">[[#{ddoimatkhau.matkhaucu}]]</label>
                             <div class="input-group">
                                 <input type="password" class="form-control" id="pass" placeholder="Nhập mật khẩu cũ"
                                     name="pswd" required>
@@ -52,7 +52,7 @@
                             </div>
                         </div>
                         <div class="mb-4 mt-3">
-                            <label for="pwd">Mật khẩu mới:</label>
+                            <label for="pwd">[[#{ddoimatkhau.matkhaumoi}]]</label>
                             <div class="input-group">
                                 <input type="password" class="form-control" id="pass1" placeholder="Nhập mật khẩu mới"
                                     name="pswd" required>
@@ -62,7 +62,7 @@
                             </div>
                         </div>
                         <div class="mb-4 mt-3">
-                            <label for="pwd">Xác nhận mật khẩu:</label>
+                            <label for="pwd">[[#{ddoimatkhau.xacnhanmk}]]</label>
                             <div class="input-group">
                                 <input type="password" class="form-control" id="pass2" placeholder="Xác nhận mật khẩu"
                                     name="pswd" required>
@@ -73,7 +73,7 @@
                         </div>
 
                         <button type="submit" class="btn btn-login">OK</button>
-                        <h6 class="mt-4 text-center"><a href="./signin.html">Quay về trang chủ</a></h6>
+                        <h6 class="mt-4 text-center"><a href="./signin.html">[[#{ddoimatkhau.quayvetrangchu}]]</a></h6>
                     </form>
                 </div>
 
