[JAVA - HTML] - Done Login

--- a/ConverseStore_Java6/src/main/resources/templates/admin/admin_NguoiDung.html
+++ b/ConverseStore_Java6/src/main/resources/templates/admin/admin_NguoiDung.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{/layout/layout_admin::dynamic(~{::body})}">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{/layout/layout::dynamic(~{::body})}">
 
 <head>
     <meta charset="UTF-8" />
