[JAVA - HTML] - Remember when tick to checkbox, Save Session when user login done

--- a/ConverseStore_Java6/src/main/resources/templates/user/dangnhap.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/dangnhap.html
@@ -46,7 +46,7 @@
                             <label for="pwd">[[#{ddangnhap.matkhau}]]</label>
                             <div class="input-group">
                                 <input type="password" class="form-control" id="pass" placeholder="Nhập mật khẩu"
-                                    name="pass" required >
+                                    name="pass" required th:value="${x}">
                                 <a onclick="hidePass()" class="btn btn-cart"><i class="ti-eye"></i></a>
                                 <div class="valid-feedback">Đã nhập mật khẩu</div>
                                 <div class="invalid-feedback">Vui lòng nhập mật khẩu</div>
@@ -57,7 +57,7 @@
 
                             <div class="form-check mb-3">
                                 <label class="form-check-label">
-                                    <input class="form-check-input" type="checkbox" name="remember"> [[#{ddangnhap.luutaikhoan}]]
+                                    <input class="form-check-input" type="checkbox" name="remember" value="true" th:checked="${remember}"> [[#{ddangnhap.luutaikhoan}]]
                                 </label>
                             </div>
 
