--- a/ConverseStore_Java6/src/main/resources/templates/layout/layout.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/layout.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CONVERSE || [[${title}]]</title>
 <!-- Bootstrap CSS -->
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
 	rel="stylesheet"
@@ -27,7 +28,7 @@
 
 </head>
 
-<body>
+<body ng-app="shopping-cart-app" ng-controller="shopping-cart-ctrl">
 
 
 
@@ -51,6 +52,7 @@
 		src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
 		integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
 		crossorigin="anonymous"></script>
+	<script src="/assets/js/cart.js" type="text/javascript"></script>
 	<script>
         $('.owl-carousel').owlCarousel({
             loop: true,
