--- a/ConverseStore_Java6/src/main/resources/templates/user/sanphamCT.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/sanphamCT.html
@@ -10,17 +10,7 @@
 </head>
 
 <body>
-<!-- 	<main th:object="${productitem}"> -->
-<!-- 		<h1>chi tiết</h1> -->
-<!-- 		[[${{productitem.productName}}]] -->
-<!-- 		[[${{productitem.categories.categoryName}}]] -->
-<!-- 		<img class="card-img-top" th:src="@{|/assets/imageSP/*{productImage1}|}"> -->
-<!-- 		<h1>cùng loại</h1> -->
-<!-- 			<li th:each="p:${productitem.categories.product}"><a -->
-<!-- 				th:href="@{|/sanpham/chitietsp/${p.productID}|}" -->
-<!-- 				th:text="${p.productName}"></a></li> -->
-<!-- 		</ul> -->
-<!-- 	</main> -->
+
 
 	<main th:object="${productitem}">
 		<!-- mainChitietsp start -->
@@ -85,41 +75,39 @@
 							<!--                            </form> -->
 							<!--                         </div> -->
 							<form method="post">
-							<div class="row mt-4 mb-4">
-								<span class="col-md-3 size1">Size:</span>
-								<div class="col-md-9">
-								
-								<select th:name="size" class="form-select select-custom">
-                                    <option th:each="s: ${sizs}" th:value="${s.sizeID}" th:text="${s.sizeID}">37</option>
-                                </select>
-                                
+								<div class="row mt-4 mb-4">
+									<span class="col-md-3 size1">Size:</span>
+									<div class="col-md-9">
+										<select ng-model="size" 
+											class="form-select select-custom">
+											<option th:each="s: ${sizs}" th:value="${s.sizeID}"
+												th:text="${s.sizeID}"></option>
+										</select>
 									</div>
-							</div>
-							
-							<div class="row mt-4 mb-4">
-								<span class="col-md-3 size1">Màu:</span>
-								
-								<div class="col-md-9">
-								
-								<select th:name="color" class="form-select select-custom">
-                                    <option th:each="co: ${cols}" th:value="${co.colorID}" th:text="${co.colorID}">37</option>
-                                </select>
-                                
-                                
+								</div>
+
+								<div class="row mt-4 mb-4">
+									<span class="col-md-3 size1">Màu:</span>
+									<div class="col-md-9">
+										<select ng-model="color" 
+											class="form-select select-custom">
+											<option th:each="co: ${cols}" th:value="${co.colorID}"
+												th:text="${co.colorID}"></option>
+										</select>
 									</div>
-							</div>
-							
-							<div class="row mt-4 mb-4">
-                            <span class="col-md-3 size1">Số lượng: </span>
-                            <div class="col-md-9">
-                                <input type="number" class="form-control select-custom" value="1">
-                            </div>
-                        	</div>
+								</div>
+
+								<div class="row mt-4 mb-4">
+									<span class="col-md-3 size1">Số lượng: </span>
+									<div class="col-md-9">
+										<input value=1 ng-model="qty" type="number" class="form-control select-custom">
+										
+									</div>
+								</div>
 
 
 								<div class="mt-4 mb-4">
-									<a href=""
-										class="icon position-relative yeuthich fs-4"> <i
+									<a href="" class="icon position-relative yeuthich fs-4"> <i
 										class="ti-heart"></i> <span>Cho vào yêu thích</span>
 									</a>
 								</div>
@@ -131,171 +119,182 @@
 									</a>
 								</div>
 
-								<div class="mt-4 mb-4" > 
-									<button th:formaction="@{|/addtocart/${productitem.productID}|}" type="submit"
+								<div class="mt-4 mb-4">
+									<button type="submit"
+									
+										th:attr="ng-click=@{|addToCart(${productitem.productID},size,color,qty)|}"
 										class="btn btn-themvaogio">Thêm vào giỏ</button>
 								</div>
-								</form>
-								<!-- The Modal Start-->
-								<div class="modal fade" id="myModal">
-									<div class="modal-dialog modal-xl">
-										<div class="modal-content">
+							</form>
+							<!-- The Modal Start-->
+							<div class="modal fade" id="myModal">
+								<div class="modal-dialog modal-xl">
+									<div class="modal-content">
 
-											<!-- Modal Header -->
-											<div class="modal-header">
-												<h4 class="modal-title">HƯỚNG DẪN CHỌN SIZE</h4>
-												<button type="button" class="btn-close"
-													data-bs-dismiss="modal"></button>
-											</div>
+										<!-- Modal Header -->
+										<div class="modal-header">
+											<h4 class="modal-title">HƯỚNG DẪN CHỌN SIZE</h4>
+											<button type="button" class="btn-close"
+												data-bs-dismiss="modal"></button>
+										</div>
 
-											<!-- Modal body -->
-											<div class="modal-body">
-												<table
-													class="table table-hover text-center table-size table-striped">
-													<thead>
-														<tr>
-															<th>SIZE</th>
-															<th>UK</th>
-															<th>US</th>
-															<th>EU</th>
-															<th>JAPAN</th>
-														</tr>
-													</thead>
-													<tbody>
-														<tr>
-															<th>XS</th>
-															<th>6 - 8</th>
-															<th>4</th>
-															<th>34.5</th>
-															<th>7</th>
-														</tr>
-														<tr>
-															<th>S</th>
-															<th>8 - 10</th>
-															<th>6</th>
-															<th>36.5</th>
-															<th>9</th>
-														</tr>
-														<tr>
-															<th>M</th>
-															<th>10 - 12</th>
-															<th>8</th>
-															<th>38.5</th>
-															<th>11</th>
-														</tr>
-														<tr>
-															<th>L</th>
-															<th>12 - 14</th>
-															<th>10</th>
-															<th>40</th>
-															<th>13</th>
-														</tr>
-														<tr>
-															<th>XL</th>
-															<th>14 - 16</th>
-															<th>12</th>
-															<th>42</th>
-															<th>15</th>
-														</tr>
-														<tr>
-															<th>XXL</th>
-															<th>16 - 28</th>
-															<th>14</th>
-															<th>44</th>
-															<th>17</th>
-														</tr>
-													</tbody>
-												</table>
-											</div>
+										<!-- Modal body -->
+										<div class="modal-body">
+											<table
+												class="table table-hover text-center table-size table-striped">
+												<thead>
+													<tr>
+														<th>SIZE</th>
+														<th>UK</th>
+														<th>US</th>
+														<th>EU</th>
+														<th>JAPAN</th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr>
+														<th>XS</th>
+														<th>6 - 8</th>
+														<th>4</th>
+														<th>34.5</th>
+														<th>7</th>
+													</tr>
+													<tr>
+														<th>S</th>
+														<th>8 - 10</th>
+														<th>6</th>
+														<th>36.5</th>
+														<th>9</th>
+													</tr>
+													<tr>
+														<th>M</th>
+														<th>10 - 12</th>
+														<th>8</th>
+														<th>38.5</th>
+														<th>11</th>
+													</tr>
+													<tr>
+														<th>L</th>
+														<th>12 - 14</th>
+														<th>10</th>
+														<th>40</th>
+														<th>13</th>
+													</tr>
+													<tr>
+														<th>XL</th>
+														<th>14 - 16</th>
+														<th>12</th>
+														<th>42</th>
+														<th>15</th>
+													</tr>
+													<tr>
+														<th>XXL</th>
+														<th>16 - 28</th>
+														<th>14</th>
+														<th>44</th>
+														<th>17</th>
+													</tr>
+												</tbody>
+											</table>
 										</div>
 									</div>
 								</div>
-								<!-- The Modal End-->
 							</div>
+							<!-- The Modal End-->
 						</div>
 					</div>
-					<!--                 </form> -->
-
 				</div>
-			</div>
+				<!--                 </form> -->
 
-			<!-- form bình luận start -->
-			<div class="container">
-				<h4 class="title-bosuutap">BÌNH LUẬN</h4>
-				<form>
-					<div class="form-group mb-3">
-						<label for="comment">Nhập bình luận:</label>
-						<textarea class="form-control" id="comment" rows="3" required></textarea>
-					</div>
-					<button type="submit" class="btn btn-primary">Gửi</button>
-				</form>
 			</div>
+		</div>
 
-			<!-- Hiển thị bình luận -->
-			<div class="container mt-4">
-				<h3>Bình luận</h3>
-				<div class="media" th:each="comment : ${comments}" th:if="${comment.status == true}">
+		<!-- form bình luận start -->
+		<div class="container">
+			<h4 class="title-bosuutap">BÌNH LUẬN</h4>
+			<form>
+				<div class="form-group mb-3">
+					<label for="comment">Nhập bình luận:</label>
+					<textarea class="form-control" id="comment" rows="3" required></textarea>
+				</div>
+				<button type="submit" class="btn btn-primary">Gửi</button>
+			</form>
+		</div>
+
+		<!-- Hiển thị bình luận -->
+		<div class="container mt-4">
+			<h3>Bình luận</h3>
+			<div class="media" th:each="comment : ${comments}"
+				th:if="${comment.status == true}">
 				<img th:src="@{|/assets/|}" class="mr-3" alt="User Avatar">
-					<div class="media-body">
-						<h4 class="mt-0" th:text="${comment.customers.customerName}"></h4>
-						<h5  th:text="${comment.comment}" style="font-weight: 500"></h5>
-					</div>					
+				<div class="media-body">
+					<h4 class="mt-0" th:text="${comment.customers.customerName}"></h4>
+					<h5 th:text="${comment.comment}" style="font-weight: 500"></h5>
 				</div>
 			</div>
+		</div>
 
-			<!-- form bình luận end -->
+		<!-- form bình luận end -->
 
-			<!-- sản phẩm tương tự start  -->
+		<!-- sản phẩm tương tự start  -->
 
-    <div class="sanphamtuongtu">
-        <h4 class="title-bosuutap">SẢN PHẨM TƯƠNG TỰ</h4>
-        <div class="container-fluid my-5">
-            <div class="row">
-                <div class="col-12 m-auto">
-                    <div class="owl-carousel owl-theme">
-                    <!-- 		<ul> -->
+		<div class="sanphamtuongtu">
+			<h4 class="title-bosuutap">SẢN PHẨM TƯƠNG TỰ</h4>
+			<div class="container-fluid my-5">
+				<div class="row">
+					<div class="col-12 m-auto">
+						<div class="owl-carousel owl-theme">
+							<!-- 		<ul> -->
 
-                        <div th:each="p:${productitem.categories.product}" class="item mb-4">
-                            <div class="card border-0 shadow">
-                                <a th:href="@{|/sanpham/chitietsp/${p.productID}|}"><img class="card-img-top" th:src="@{|/assets/imageSP/${p.productImage1}|}"
-                                        alt="Card image" style="width:100%"></a>
-                                <div class="card-body">
-                                    <a th:href="@{|/sanpham/chitietsp/${p.productID}|}">
-                                        <h4 class="card-title text-center" th:text="${p.productName}"></h4>
-                                        <div class="price-product">
-<!--                                     <div th:if="${sanpham.giamgia.giamgia == 0}" > -->
-                                    	
-                                    	<h4 class="card-title" ><span class="card-title-normal"  th:text="${#numbers.formatDecimal(p.price, 0, 'COMMA', 0 , 'POINT')} + ' ₫'"></span></h4>
-                                    	<h4 class="card-title" style="color: white;">123</h4>
-<!--                                     </div> -->
-<!--                                     <div th:if="${sanpham.giamgia.giamgia != 0}"> -->
-<!--                                     	<h4 class="card-title"><span class="card-title-old"  th:text="${#numbers.formatDecimal(sanpham.gia, 0, 'COMMA', 0 , 'POINT')} + ' ₫'"></span></h4> -->
-<!-- 											 <h4 class="card-title"><span class="card-title-sale"  th:text="${#numbers.formatDecimal(sanpham.giamgiasp, 0, 'COMMA', 0 , 'POINT')}  + ' ₫'"></span></h4> -->
-<!--                                     </div> -->
-											
-                                    </div>
-                                    </a>
-                                    <div class="row d-flex justify-content-center">
-                                        <a th:href="@{|/sanpham/chitietsp/${p.productID}|}" class="btn product-btn"><i class="ti-shopping-cart"></i> Chi Tiết</a>
-                                        <a th:href="@{/yeuthich}" class="btn product-btn"><i class="ti-heart"></i> Yêu thích</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+							<div th:each="p:${productitem.categories.product}"
+								class="item mb-4">
+								<div class="card border-0 shadow">
+									<a th:href="@{|/sanpham/chitietsp/${p.productID}|}"><img
+										class="card-img-top"
+										th:src="@{|/assets/imageSP/${p.productImage1}|}"
+										alt="Card image" style="width: 100%"></a>
+									<div class="card-body">
+										<a th:href="@{|/sanpham/chitietsp/${p.productID}|}">
+											<h4 class="card-title text-center" th:text="${p.productName}"></h4>
+											<div class="price-product">
+												<!--                                     <div th:if="${sanpham.giamgia.giamgia == 0}" > -->
 
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+												<h4 class="card-title">
+													<span class="card-title-normal"
+														th:text="${#numbers.formatDecimal(p.price, 0, 'COMMA', 0 , 'POINT')} + ' ₫'"></span>
+												</h4>
+												<h4 class="card-title" style="color: white;">123</h4>
+												<!--                                     </div> -->
+												<!--                                     <div th:if="${sanpham.giamgia.giamgia != 0}"> -->
+												<!--                                     	<h4 class="card-title"><span class="card-title-old"  th:text="${#numbers.formatDecimal(sanpham.gia, 0, 'COMMA', 0 , 'POINT')} + ' ₫'"></span></h4> -->
+												<!-- 											 <h4 class="card-title"><span class="card-title-sale"  th:text="${#numbers.formatDecimal(sanpham.giamgiasp, 0, 'COMMA', 0 , 'POINT')}  + ' ₫'"></span></h4> -->
+												<!--                                     </div> -->
 
-    <!-- sản phẩm tương tự end  -->
+											</div>
+										</a>
+										<div class="row d-flex justify-content-center">
+											<a th:href="@{|/sanpham/chitietsp/${p.productID}|}"
+												class="btn product-btn"><i class="ti-shopping-cart"></i>
+												Chi Tiết</a> <a th:href="@{/yeuthich}" class="btn product-btn"><i
+												class="ti-heart"></i> Yêu thích</a>
+										</div>
+									</div>
+								</div>
+							</div>
 
-			<!-- mainChitietsp end -->
-			<button type="button" class="btn btn-primary btn-floating btn-lg"
-				id="btn-back-to-top">
-				<i class="ti-angle-double-up"></i>
-			</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- sản phẩm tương tự end  -->
+
+		<!-- mainChitietsp end -->
+		<button type="button" class="btn btn-primary btn-floating btn-lg"
+			id="btn-back-to-top">
+			<i class="ti-angle-double-up"></i>
+		</button>
 	</main>
 
 </body>
