--- a/ConverseStore_Java6/src/main/resources/templates/user/confirmCode.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/confirmCode.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONVERSE || ĐĂNG NHẬP</title>
+    <title>CONVERSE || XÁC NHẬN</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -16,10 +16,40 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" />
-    <link rel="stylesheet" href="/assets/css/mycss.css">
-    <link rel="stylesheet" href="/assets/font/themify-icons/themify-icons.css">
+    <link th:href="@{/css/mycss.css}" rel="stylesheet" />
+    <link th:href="@{/font/themify-icons/themify-icons.css}" rel="stylesheet" />
 
 </head>
+<style>
+button {
+ padding: 17px 40px;
+ border-radius: 50px;
+ border: 0;
+ background-color: white;
+ box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+ letter-spacing: 1.5px;
+ text-transform: uppercase;
+ font-size: 15px;
+ transition: all .5s ease;
+ margin: auto;
+}
+
+button:hover {
+ letter-spacing: 3px;
+ background-color: #FFF0F5;
+ color: white;
+ box-shadow: rgb(93 24 220) 0px 7px 29px 0px;
+}
+
+button:active {
+ letter-spacing: 3px;
+ background-color: #FFF0F5;
+ color: white;
+ box-shadow: rgb(93 24 220) 0px 0px 0px 0px;
+ transform: translateY(10px);
+ transition: 100ms;
+}
+</style>
 
 <body>
 
@@ -27,54 +57,29 @@
     <div id="mainLogin">
         <div class="container">
             <div class="row m-5 login1">
-
-                <div class="col-md-6 login-form p-5">
-                    <h2 class="text-center">[[#{ddangnhap.dangnhap}]]</h2>
-                    <div th:if="${messageLoginFail}">
-                    	<h5 class="text-danger text-center" th:text="${messageLoginFail}"></h5>
+                <div class="col-md-6" style="padding: 0; ">
+                    <img style="    
+                    object-fit: cover;
+                    height: 700px;" src="/assets/images/signup.jpg" alt="HinhAnh">
+                </div>
+                <div class="col-md-6 login-form  p-5">
+                    <h2 class="text-center">CONVERSE XÁC THỰC</h2>
+                    <div th:if="${messageConfirmPassWrong}">
+                    	<h5 class="text-danger text-center" th:text="${messageConfirmPassWrong}"></h5>
                     </div>
-                    <form th:action="@{/loginConfirm}" class="needs-validation" novalidate th:object="${Customer}">
+                    <form th:action="@{/xacnhanB2}" method="post" >
                         <div class="mb-4 mt-3">
-                            <label for="email">[[#{ddangnhap.email}]]</label>
-                            <input type="email" class="form-control" id="email" placeholder="Nhập email" name="email"
-                                required th:field="*{customerEmail}">
-                            <div class="valid-feedback">Đã nhập gmail</div>
-                            <div class="invalid-feedback">Vui lòng nhập gmail</div>
+                            <label for="fullname">Mã xác thực</label>
+                            <input type="number" class="form-control" id="fullname" placeholder="Nhập mã xác thực"
+                               name="code">
                         </div>
 
-                        <div class="mb-4 mt-3">
-                            <label for="pwd">[[#{ddangnhap.matkhau}]]</label>
-                            <div class="input-group">
-                                <input type="password" class="form-control" id="pass" placeholder="Nhập mật khẩu"
-                                    name="pass" required th:value="${x}">
-                                <a onclick="hidePass()" class="btn btn-cart"><i class="ti-eye"></i></a>
-                                <div class="valid-feedback">Đã nhập mật khẩu</div>
-                                <div class="invalid-feedback">Vui lòng nhập mật khẩu</div>
-                            </div>
-
-                        </div>
-                        <div class="form1">
-
-                            <div class="form-check mb-3">
-                                <label class="form-check-label">
-                                    <input class="form-check-input" type="checkbox" name="remember" value="true" th:checked="${remember}"> [[#{ddangnhap.luutaikhoan}]]
-                                </label>
-                            </div>
-
-
-                            <a href="./forgotpass.html">[[#{ddangnhap.quenmk}]]</a>
-
-                        </div>
-                        <button type="submit" class="btn btn-login">OK</button>
-                        <h6 class="mt-4 text-center">[[#{ddangnhap.chuacotk}]] <a th:href="@{/dangky}">[[#{ddangnhap.dkngay}]]</a>
+                        <button type="submit" class="btn btn-login">Xác Nhận</button>
+                        <h6 class="mt-4 text-center"><a id="resend" th:href="@{/xacnhan}">Gửi lại mã (------)</a></h6>
                         </h6>
                     </form>
                 </div>
-                <div class="col-md-6" style="padding: 0;">
-                    <img style="    
-                    object-fit: cover;
-                    height: 700px;" src="/assets/images/banner5.png" alt="HinhAnh">
-                </div>
+
             </div>
         </div>
     </div>
@@ -82,6 +87,7 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
     <!-- Danh mục sản phẩm bắt đầu -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
@@ -127,7 +133,7 @@
                 mybutton.style.display = "none";
             }
         }
-//         mybutton.addEventListener("click", backToTop);
+        mybutton.addEventListener("click", backToTop);
 
         function backToTop() {
             document.body.scrollTop = 0;
@@ -194,7 +200,35 @@
         })()
     </script>
     <!-- Validation form end -->
-
+    
+    
+    <script>
+	// Vô hiệu hoá thẻ a khi trang được tải
+	window.onload = function() {
+	    var link = document.getElementById("resend");
+	    link.style.pointerEvents = "none";  // Vô hiệu hoá tương tác chuột
+	    link.style.color = "gray";          // Thay đổi màu văn bản thành màu xám
+	    link.style.cursor = "default";      // Sử dụng kiểu con trỏ mặc định
+	    
+	    var countdown = 30;  // Thời gian đếm ngược (số giây)
+	    var timer = setInterval(function() {
+	        countdown--;
+	        if (countdown <= 0) {
+	            // Khi đếm ngược kết thúc, cho phép tương tác với thẻ a trở lại
+	            link.style.pointerEvents = "auto";
+	            link.style.color = "black";
+	            link.style.cursor = "pointer";
+	            link.textContent = "Gửi lại mã";
+	            
+	            clearInterval(timer);  // Dừng đếm ngược
+	        }else{
+	            // Cập nhật nội dung của thẻ <a> với số giây đếm ngược
+	            link.textContent = "Gửi lại mã (" + countdown + " giây)";
+	        }
+	    }, 1000);  // Cứ mỗi 1 giây (1000ms) đếm ngược 1 lần
+	}
+	</script>
+    
 </body>
 
 </html>
