Squashed commit of the following:
commit d98034abb695e59be87a5e7b0037d2708fb725f1
Merge: 31e76bb 09b15c6
Author: LinhVuKg <117135882+LinhVuKg@users.noreply.github.com>
Date:   Mon Aug 7 08:18:22 2023 +0700

    Merge branch 'Dev' into Dev_Linh

commit 31e76bb27a45613d510950c19c0da709349eab1f
Author: LinhVuKg <117135882+LinhVuKg@users.noreply.github.com>
Date:   Mon Aug 7 08:10:20 2023 +0700

    [ECLIPSE] cập nhật rất nhiều

commit 09b15c6c7c8c752d48a4f1e1ee2c485ec75f17d0
Merge: 27ed673 3fd73d3
Author: Tieen001 <Minhtien13052003@gmail.com>
Date:   Mon Aug 7 08:03:49 2023 +0700

    Merge branch 'Dev' into Dev_NguyeenxTieens

commit 27ed67345c0b49841c92c4b6979c7e61d8455225
Author: Tieen001 <Minhtien13052003@gmail.com>
Date:   Mon Aug 7 08:00:25 2023 +0700

    [ECLIPSE] them favorite them sua xoa validate nha cung cap khuyen mai

commit 16c5e028d26c62dc7b9607cd514f9702d6bfe3f8
Merge: 14d3ef9 8020a2a
Author: Tieen001 <Minhtien13052003@gmail.com>
Date:   Sun Aug 6 02:10:14 2023 +0700

    Merge branch 'Dev' into Dev_NguyeenxTieens

commit 14d3ef966609e7d660f539142ba784b97d051be2
Author: Tieen001 <Minhtien13052003@gmail.com>
Date:   Sun Aug 6 02:04:30 2023 +0700

    Thêm sửa xóa ncc km

--- a/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
@@ -6,6 +6,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>CONVERSE || SẢN PHẨM</title>
 </head>
 
@@ -147,8 +148,9 @@
 										</a>
 										<div class="row d-flex justify-content-center">
 											<a th:href="@{|/sanpham/chitietsp/${p.productID}|}"
-												class="btn product-btn"><i class="ti-shopping-cart"></i> [[#{ssanpham.chitiet}]]</a> <a th:href="@{'/addyeuthich/'+ ${p.productID}}"
-												class="btn product-btn"><i class="ti-heart"></i> [[#{ssanpham.yeuthich}]]</a>
+											class="btn product-btn"><i class="ti-shopping-cart"></i> [[#{ssanpham.chitiet}]]</a>
+                                        <button type="submit" th:attr="ng-click=@{|favo.add(${p.productID})|}"  class="btn product-btn"><i class="ti-heart"></i> Yêu thích</button>
+                                    </div>
 										</div>
 									</div>
 								</div>
