[JAVA- HTML] - Update logout remove session

--- a/ConverseStore_Java6/src/main/resources/templates/layout/user_menu.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/user_menu.html
@@ -71,7 +71,7 @@
 											th:href="@{/thaydoithongtin}" th:text="#{nav.infor}">THÔNG TIN CÁ NHÂN</a></li>
 										<li><a class="dropdown-item" th:href="@{/danhsachdonhang}" th:text="#{nav.order}">ĐƠN
 												HÀNG</a></li>
-										<li><a class="dropdown-item" th:href="@{/logout}" th:text="#{nav.logout}">ĐĂNG
+										<li><a class="dropdown-item" th:href="@{/dangxuat}" th:text="#{nav.logout}">ĐĂNG
 												XUẤT</a></li>
 									
 
